--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="ies.quevedo.chardat">
-
-    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".ui.RoomApp"
@@ -11,7 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CharDat">
+        android:theme="@style/Theme.CharDat"
+        tools:ignore="AllowBackup">
         <activity
             android:name=".ui.rvPersonaje.RVPersonajeActivity"
             android:exported="true">
